Fix alignment of navbar elements

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -46,13 +46,16 @@ i.nav {
     justify-content: flex-end;
     align-items: flex-end;
     margin-left: 200px;
+    color: #5EB1BF;
 }
 
 input {
     border-radius: 15px;
-    border: 1px solid gray;
+    border: 1px solid #5EB1BF;;
     padding: 10px 20px 10px 20px;
     text-align: center;
+
+
 }
 
 .icon {
@@ -62,10 +65,12 @@ input {
 
 .is-flex-touch {
     display: flex;
-    margin-left: 150px;
+    margin-left: 35%;
     justify-content: flex-end;
     align-items: flex-end;
     margin-top: 85px;
+    color: #5EB1BF;
+  
 }
 .navbar-item {
     padding: 0px 10px 15px 5px;
